--- a/package.yaml
+++ b/package.yaml
@@ -23,8 +23,9 @@ dependencies:
 - base >= 4.7 && < 5
 - binary >= 0.8.5 && < 0.11
 - bytestring >= 0.10.8 && < 0.11
+- case-insensitive >= 1.2.0 && < 1.3
 - proto-lens >= 0.3.1 && < 0.4
-- zlib
+- zlib >= 0.6.2 && < 0.7
 
 library:
   source-dirs: src
